[tool.poetry]
name = "pythonism"
version = "0.1.0"
description = ""
authors = ["Grace Choi <choi.g.330@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
